# calculator_rust_cli

./: CHANGELOG.md  Cargo.toml
src/: chars.rs  check.rs  evaluate.rs  main.rs  operator.rs  parse.rs  parser.rs  sum_error.rs
supply-chain/: config.toml
wix/: main.wxs
